--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "2.3.54" !default;
+$mdi-version:          "2.4.85" !default;
 
 $mdi-icons: (
     "access-point": F002,
@@ -13,6 +13,7 @@ $mdi-icons: (
     "account": F004,
     "account-alert": F005,
     "account-box": F006,
+    "account-box-multiple": F933,
     "account-box-outline": F007,
     "account-card-details": F5D2,
     "account-check": F008,
@@ -37,12 +38,14 @@ $mdi-icons: (
     "account-plus-outline": F800,
     "account-remove": F015,
     "account-search": F016,
+    "account-search-outline": F934,
     "account-settings": F630,
     "account-settings-variant": F631,
     "account-star": F017,
     "account-switch": F019,
     "accusoft": F849,
     "adjust": F01A,
+    "adobe": F935,
     "air-conditioner": F01B,
     "airballoon": F01C,
     "airplane": F01D,
@@ -83,9 +86,13 @@ $mdi-icons: (
     "android-debug-bridge": F033,
     "android-head": F78F,
     "android-studio": F034,
+    "angle-acute": F936,
+    "angle-obtuse": F937,
+    "angle-right": F938,
     "angular": F6B1,
     "angularjs": F6BE,
     "animation": F5D8,
+    "animation-play": F939,
     "anvil": F89A,
     "apple": F035,
     "apple-finder": F036,
@@ -158,6 +165,8 @@ $mdi-icons: (
     "arrow-right-drop-circle": F059,
     "arrow-right-drop-circle-outline": F05A,
     "arrow-right-thick": F055,
+    "arrow-split-horizontal": F93A,
+    "arrow-split-vertical": F93B,
     "arrow-top-left": F05B,
     "arrow-top-right": F05C,
     "arrow-up": F05D,
@@ -178,6 +187,7 @@ $mdi-icons: (
     "atlassian": F803,
     "atom": F767,
     "attachment": F066,
+    "audio-video": F93C,
     "audiobook": F067,
     "augmented-reality": F84F,
     "auto-fix": F068,
@@ -207,15 +217,27 @@ $mdi-icons: (
     "basketball": F805,
     "battery": F079,
     "battery-10": F07A,
+    "battery-10-bluetooth": F93D,
     "battery-20": F07B,
+    "battery-20-bluetooth": F93E,
     "battery-30": F07C,
+    "battery-30-bluetooth": F93F,
     "battery-40": F07D,
+    "battery-40-bluetooth": F940,
     "battery-50": F07E,
+    "battery-50-bluetooth": F941,
     "battery-60": F07F,
+    "battery-60-bluetooth": F942,
     "battery-70": F080,
+    "battery-70-bluetooth": F943,
     "battery-80": F081,
+    "battery-80-bluetooth": F944,
     "battery-90": F082,
+    "battery-90-bluetooth": F945,
     "battery-alert": F083,
+    "battery-alert-bluetooth": F946,
+    "battery-bluetooth": F947,
+    "battery-bluetooth-variant": F948,
     "battery-charging": F084,
     "battery-charging-10": F89B,
     "battery-charging-100": F085,
@@ -246,6 +268,7 @@ $mdi-icons: (
     "battery-plus": F08F,
     "battery-positive": F090,
     "battery-unknown": F091,
+    "battery-unknown-bluetooth": F949,
     "beach": F092,
     "beaker": F68F,
     "beats": F097,
@@ -348,6 +371,7 @@ $mdi-icons: (
     "brightness-auto": F0E1,
     "broom": F0E2,
     "brush": F0E3,
+    "buddhism": F94A,
     "buffer": F619,
     "bug": F0E4,
     "bulletin-board": F0E5,
@@ -377,6 +401,7 @@ $mdi-icons: (
     "calendar-question": F691,
     "calendar-range": F678,
     "calendar-remove": F0F4,
+    "calendar-search": F94B,
     "calendar-text": F0F5,
     "calendar-today": F0F6,
     "call-made": F0F7,
@@ -452,11 +477,17 @@ $mdi-icons: (
     "cellphone-android": F11D,
     "cellphone-basic": F11E,
     "cellphone-dock": F11F,
+    "cellphone-erase": F94C,
     "cellphone-iphone": F120,
+    "cellphone-key": F94D,
     "cellphone-link": F121,
     "cellphone-link-off": F122,
+    "cellphone-lock": F94E,
     "cellphone-message": F8D2,
+    "cellphone-off": F94F,
     "cellphone-settings": F123,
+    "cellphone-settings-variant": F950,
+    "cellphone-sound": F951,
     "cellphone-text": F8D1,
     "cellphone-wireless": F814,
     "certificate": F124,
@@ -519,6 +550,7 @@ $mdi-icons: (
     "chili-medium": F7B2,
     "chili-mild": F7B3,
     "chip": F61A,
+    "christiantiy": F952,
     "church": F144,
     "circle": F764,
     "circle-edit-outline": F8D4,
@@ -539,12 +571,14 @@ $mdi-icons: (
     "clipboard-pulse-outline": F85D,
     "clipboard-text": F14E,
     "clippy": F14F,
-    "clock": F150,
-    "clock-alert": F5CE,
+    "clock": F953,
+    "clock-alert": F954,
+    "clock-alert-outline": F5CE,
     "clock-end": F151,
     "clock-fast": F152,
     "clock-in": F153,
     "clock-out": F154,
+    "clock-outline": F150,
     "clock-start": F155,
     "close": F156,
     "close-box": F157,
@@ -565,6 +599,8 @@ $mdi-icons: (
     "cloud-outline": F163,
     "cloud-print": F165,
     "cloud-print-outline": F166,
+    "cloud-search": F955,
+    "cloud-search-outline": F956,
     "cloud-sync": F63F,
     "cloud-tags": F7B5,
     "cloud-upload": F167,
@@ -634,6 +670,7 @@ $mdi-icons: (
     "contrast-circle": F197,
     "cookie": F198,
     "copyright": F5E6,
+    "cordova": F957,
     "corn": F7B7,
     "counter": F199,
     "cow": F19A,
@@ -654,6 +691,7 @@ $mdi-icons: (
     "crosshairs": F1A3,
     "crosshairs-gps": F1A4,
     "crown": F1A5,
+    "cryengine": F958,
     "cube": F1A6,
     "cube-outline": F1A7,
     "cube-send": F1A8,
@@ -661,6 +699,7 @@ $mdi-icons: (
     "cup": F1AA,
     "cup-off": F5E5,
     "cup-water": F1AB,
+    "cupcake": F959,
     "curling": F862,
     "currency-bdt": F863,
     "currency-btc": F1AC,
@@ -680,12 +719,16 @@ $mdi-icons: (
     "currency-twd": F7BE,
     "currency-usd": F1B3,
     "currency-usd-off": F679,
+    "current-ac": F95A,
+    "current-dc": F95B,
     "cursor-default": F1B4,
     "cursor-default-outline": F1B5,
     "cursor-move": F1B6,
     "cursor-pointer": F1B7,
     "cursor-text": F5E7,
     "database": F1B8,
+    "database-export": F95D,
+    "database-import": F95C,
     "database-minus": F1B9,
     "database-plus": F1BA,
     "database-search": F865,
@@ -707,6 +750,7 @@ $mdi-icons: (
     "delete-sweep": F5E9,
     "delete-variant": F1C1,
     "delta": F1C2,
+    "desk-lamp": F95E,
     "deskphone": F1C3,
     "desktop-classic": F7BF,
     "desktop-mac": F1C4,
@@ -736,6 +780,7 @@ $mdi-icons: (
     "discord": F66F,
     "disk": F5EE,
     "disk-alert": F1D1,
+    "disk-player": F95F,
     "disqus": F1D2,
     "disqus-outline": F1D3,
     "division": F1D4,
@@ -787,6 +832,8 @@ $mdi-icons: (
     "email-open": F1EF,
     "email-open-outline": F5EF,
     "email-outline": F1F0,
+    "email-search": F960,
+    "email-search-outline": F961,
     "email-secure": F1F1,
     "email-variant": F5F0,
     "emby": F6B3,
@@ -817,6 +864,8 @@ $mdi-icons: (
     "evernote": F204,
     "exclamation": F205,
     "exit-to-app": F206,
+    "exponent": F962,
+    "exponent-box": F963,
     "export": F207,
     "eye": F208,
     "eye-off": F209,
@@ -851,6 +900,8 @@ $mdi-icons: (
     "file-delimited": F218,
     "file-document": F219,
     "file-document-box": F21A,
+    "file-download": F964,
+    "file-download-outline": F965,
     "file-excel": F21B,
     "file-excel-box": F21C,
     "file-export": F21D,
@@ -891,6 +942,7 @@ $mdi-icons: (
     "fingerprint": F237,
     "fire": F238,
     "fire-truck": F8AA,
+    "firebase": F966,
     "firefox": F239,
     "fish": F23A,
     "flag": F23B,
@@ -937,6 +989,8 @@ $mdi-icons: (
     "folder-outline": F256,
     "folder-plus": F257,
     "folder-remove": F258,
+    "folder-search": F967,
+    "folder-search-outline": F968,
     "folder-star": F69C,
     "folder-upload": F259,
     "font-awesome": F03A,
@@ -989,6 +1043,7 @@ $mdi-icons: (
     "format-line-weight": F5C9,
     "format-list-bulleted": F279,
     "format-list-bulleted-type": F27A,
+    "format-list-checkbox": F969,
     "format-list-checks": F755,
     "format-list-numbers": F27B,
     "format-page-break": F6D6,
@@ -1019,6 +1074,7 @@ $mdi-icons: (
     "forum": F28C,
     "forum-outline": F821,
     "forward": F28D,
+    "fountain": F96A,
     "foursquare": F28E,
     "freebsd": F8DF,
     "fridge": F28F,
@@ -1097,6 +1153,7 @@ $mdi-icons: (
     "google-controller-off": F2B5,
     "google-drive": F2B6,
     "google-earth": F2B7,
+    "google-fit": F96B,
     "google-glass": F2B8,
     "google-hangouts": F2C9,
     "google-home": F823,
@@ -1115,6 +1172,8 @@ $mdi-icons: (
     "gradient": F69F,
     "graphql": F876,
     "grease-pencil": F648,
+    "greater-than": F96C,
+    "greater-than-or-equal": F96D,
     "grid": F2C1,
     "grid-large": F757,
     "grid-off": F2C2,
@@ -1129,8 +1188,10 @@ $mdi-icons: (
     "hammer": F8E9,
     "hand-pointing-right": F2C7,
     "hanger": F2C8,
+    "hard-hat": F96E,
     "harddisk": F2CA,
     "headphones": F2CB,
+    "headphones-bluetooth": F96F,
     "headphones-box": F2CC,
     "headphones-off": F7CD,
     "headphones-settings": F2CD,
@@ -1141,6 +1202,8 @@ $mdi-icons: (
     "heart-box": F2D2,
     "heart-box-outline": F2D3,
     "heart-broken": F2D4,
+    "heart-circle": F970,
+    "heart-circle-outline": F971,
     "heart-half": F6DE,
     "heart-half-full": F6DD,
     "heart-half-outline": F6DF,
@@ -1158,6 +1221,7 @@ $mdi-icons: (
     "high-definition": F7CE,
     "high-definition-box": F877,
     "highway": F5F7,
+    "hinduism": F972,
     "history": F2DA,
     "hockey-puck": F878,
     "hockey-sticks": F879,
@@ -1173,8 +1237,10 @@ $mdi-icons: (
     "home-lock": F8EA,
     "home-lock-open": F8EB,
     "home-map-marker": F5F8,
+    "home-minus": F973,
     "home-modern": F2DD,
     "home-outline": F6A0,
+    "home-plus": F974,
     "home-variant": F2DE,
     "hook": F6E1,
     "hook-off": F6E2,
@@ -1216,7 +1282,10 @@ $mdi-icons: (
     "image-filter-vintage": F2F8,
     "image-multiple": F2F9,
     "image-off": F82A,
+    "image-outline": F975,
     "image-plus": F87B,
+    "image-search": F976,
+    "image-search-outline": F977,
     "import": F2FA,
     "inbox": F686,
     "inbox-arrow-down": F2FB,
@@ -1231,12 +1300,14 @@ $mdi-icons: (
     "instapaper": F2FF,
     "internet-explorer": F300,
     "invert-colors": F301,
+    "islam": F978,
     "itunes": F676,
     "jeepney": F302,
     "jira": F303,
     "jquery": F87C,
     "jsfiddle": F304,
     "json": F626,
+    "judaism": F979,
     "karate": F82B,
     "keg": F305,
     "kettle": F5FA,
@@ -1251,6 +1322,7 @@ $mdi-icons: (
     "keyboard-caps": F30E,
     "keyboard-close": F30F,
     "keyboard-off": F310,
+    "keyboard-outline": F97A,
     "keyboard-return": F311,
     "keyboard-tab": F312,
     "keyboard-variant": F313,
@@ -1299,11 +1371,14 @@ $mdi-icons: (
     "led-variant-off": F32E,
     "led-variant-on": F32F,
     "led-variant-outline": F330,
+    "less-than": F97B,
+    "less-than-or-equal": F97C,
     "library": F331,
     "library-books": F332,
     "library-music": F333,
     "library-plus": F334,
     "lifebuoy": F87D,
+    "light-switch": F97D,
     "lightbulb": F335,
     "lightbulb-on": F6E7,
     "lightbulb-on-outline": F6E8,
@@ -1319,6 +1394,7 @@ $mdi-icons: (
     "loading": F771,
     "lock": F33E,
     "lock-alert": F8ED,
+    "lock-clock": F97E,
     "lock-open": F33F,
     "lock-open-outline": F340,
     "lock-outline": F341,
@@ -1340,6 +1416,7 @@ $mdi-icons: (
     "magnet": F347,
     "magnet-on": F348,
     "magnify": F349,
+    "magnify-close": F97F,
     "magnify-minus": F34A,
     "magnify-minus-outline": F6EB,
     "magnify-plus": F34B,
@@ -1356,14 +1433,21 @@ $mdi-icons: (
     "map-marker-outline": F7D8,
     "map-marker-plus": F651,
     "map-marker-radius": F352,
+    "map-minus": F980,
+    "map-outline": F981,
+    "map-plus": F982,
+    "map-search": F983,
+    "map-search-outline": F984,
     "margin": F353,
     "markdown": F354,
     "marker": F652,
     "marker-check": F355,
+    "material-design": F985,
     "material-ui": F357,
     "math-compass": F358,
     "matrix": F628,
     "maxcdn": F359,
+    "medal": F986,
     "medical-bag": F6EE,
     "medium": F35A,
     "memory": F35B,
@@ -1404,6 +1488,7 @@ $mdi-icons: (
     "microphone-variant-off": F371,
     "microscope": F654,
     "microsoft": F372,
+    "microsoft-dynamics": F987,
     "midi": F8F0,
     "midi-port": F8F1,
     "minecraft": F373,
@@ -1417,10 +1502,13 @@ $mdi-icons: (
     "mixed-reality": F87E,
     "mixer": F7DC,
     "monitor": F379,
+    "monitor-cellphone": F988,
+    "monitor-cellphone-star": F989,
     "monitor-multiple": F37A,
     "more": F37B,
     "motorbike": F37C,
     "mouse": F37D,
+    "mouse-bluetooth": F98A,
     "mouse-off": F37E,
     "mouse-variant": F37F,
     "mouse-variant-off": F380,
@@ -1428,6 +1516,7 @@ $mdi-icons: (
     "move-resize-variant": F656,
     "movie": F381,
     "movie-roll": F7DD,
+    "muffin": F98B,
     "multiplication": F382,
     "multiplication-box": F383,
     "mushroom": F7DE,
@@ -1474,6 +1563,8 @@ $mdi-icons: (
     "ninja": F773,
     "nintendo-switch": F7E0,
     "nodejs": F399,
+    "not-equal": F98C,
+    "not-equal-variant": F98D,
     "note": F39A,
     "note-multiple": F6B7,
     "note-multiple-outline": F6B8,
@@ -1484,6 +1575,8 @@ $mdi-icons: (
     "notebook": F82D,
     "notification-clear-all": F39F,
     "npm": F6F6,
+    "npm-variant": F98E,
+    "npm-variant-outline": F98F,
     "nuke": F6A3,
     "null": F7E1,
     "numeric": F3A0,
@@ -1529,6 +1622,7 @@ $mdi-icons: (
     "octagram-outline": F774,
     "odnoklassniki": F3C5,
     "office": F3C6,
+    "office-building": F990,
     "oil": F3C7,
     "oil-temperature": F3C8,
     "omega": F3C9,
@@ -1660,10 +1754,13 @@ $mdi-icons: (
     "plus-circle": F417,
     "plus-circle-multiple-outline": F418,
     "plus-circle-outline": F419,
+    "plus-minus": F991,
+    "plus-minus-box": F992,
     "plus-network": F41A,
     "plus-one": F41B,
     "plus-outline": F704,
     "pocket": F41C,
+    "podcast": F993,
     "pokeball": F41D,
     "poker-chip": F82F,
     "polaroid": F41E,
@@ -1700,11 +1797,16 @@ $mdi-icons: (
     "priority-high": F603,
     "priority-low": F604,
     "professional-hexagon": F42D,
+    "progress-check": F994,
+    "progress-clock": F995,
+    "progress-download": F996,
+    "progress-upload": F997,
     "projector": F42E,
     "projector-screen": F42F,
     "publish": F6A6,
     "pulse": F430,
     "puzzle": F431,
+    "qi": F998,
     "qqchat": F605,
     "qrcode": F432,
     "qrcode-edit": F8B7,
@@ -1732,6 +1834,7 @@ $mdi-icons: (
     "read": F447,
     "receipt": F449,
     "record": F44A,
+    "record-player": F999,
     "record-rec": F44B,
     "recycle": F44C,
     "reddit": F44D,
@@ -1757,7 +1860,8 @@ $mdi-icons: (
     "resize-bottom-right": F45D,
     "responsive": F45E,
     "restart": F708,
-    "restore": F6A7,
+    "restore": F99A,
+    "restore-clock": F6A7,
     "rewind": F45F,
     "rewind-outline": F709,
     "rhombus": F70A,
@@ -1817,8 +1921,11 @@ $mdi-icons: (
     "seat-recline-normal": F482,
     "security": F483,
     "security-account": F88E,
+    "security-close": F99B,
     "security-home": F689,
+    "security-lock": F99C,
     "security-network": F484,
+    "security-off": F99D,
     "select": F485,
     "select-all": F486,
     "select-inverse": F487,
@@ -1844,6 +1951,7 @@ $mdi-icons: (
     "set-left-right": F77C,
     "set-none": F77D,
     "set-right": F77E,
+    "set-top-box": F99E,
     "settings": F493,
     "settings-box": F494,
     "settings-outline": F8BA,
@@ -1865,6 +1973,8 @@ $mdi-icons: (
     "shopping-music": F49B,
     "shovel": F70F,
     "shovel-off": F710,
+    "shower": F99F,
+    "shower-head": F9A0,
     "shredder": F49C,
     "shuffle": F49D,
     "shuffle-disabled": F49E,
@@ -1939,6 +2049,7 @@ $mdi-icons: (
     "source-pull": F4C2,
     "soy-sauce": F7ED,
     "speaker": F4C3,
+    "speaker-bluetooth": F9A1,
     "speaker-off": F4C4,
     "speaker-wireless": F71E,
     "speedometer": F4C5,
@@ -1953,6 +2064,7 @@ $mdi-icons: (
     "square-inc-cash": F4CB,
     "square-outline": F762,
     "square-root": F783,
+    "square-root-box": F9A2,
     "ssh": F8BF,
     "stack-exchange": F60B,
     "stack-overflow": F4CC,
@@ -1961,6 +2073,8 @@ $mdi-icons: (
     "standard-definition": F7EE,
     "star": F4CE,
     "star-circle": F4CF,
+    "star-circle-outline": F9A3,
+    "star-face": F9A4,
     "star-half": F4D0,
     "star-off": F4D1,
     "star-outline": F4D2,
@@ -2016,6 +2130,7 @@ $mdi-icons: (
     "table-column-width": F4EF,
     "table-edit": F4F0,
     "table-large": F4F1,
+    "table-merge-cells": F9A5,
     "table-of-contents": F835,
     "table-row": F836,
     "table-row-height": F4F2,
@@ -2026,6 +2141,7 @@ $mdi-icons: (
     "table-settings": F837,
     "tablet": F4F6,
     "tablet-android": F4F7,
+    "tablet-cellphone": F9A6,
     "tablet-ipad": F4F8,
     "taco": F761,
     "tag": F4F9,
@@ -2057,7 +2173,10 @@ $mdi-icons: (
     "test-tube": F668,
     "test-tube-empty": F910,
     "test-tube-off": F911,
+    "text": F9A7,
     "text-shadow": F669,
+    "text-short": F9A8,
+    "text-subject": F9A9,
     "text-to-speech": F50A,
     "text-to-speech-off": F50B,
     "textbox": F60E,
@@ -2094,6 +2213,9 @@ $mdi-icons: (
     "timetable": F520,
     "toggle-switch": F521,
     "toggle-switch-off": F522,
+    "toilet": F9AA,
+    "toolbox": F9AB,
+    "toolbox-outline": F9AC,
     "tooltip": F523,
     "tooltip-edit": F524,
     "tooltip-image": F525,
@@ -2103,6 +2225,7 @@ $mdi-icons: (
     "tooth": F8C2,
     "tooth-outline": F529,
     "tor": F52A,
+    "tournament": F9AD,
     "tower-beach": F680,
     "tower-fire": F681,
     "towing": F83B,
@@ -2151,11 +2274,13 @@ $mdi-icons: (
     "twitter-box": F545,
     "twitter-circle": F546,
     "twitter-retweet": F547,
+    "two-factor-authentication": F9AE,
     "uber": F748,
     "ubuntu": F548,
     "ultra-high-definition": F7F8,
     "umbraco": F549,
     "umbrella": F54A,
+    "umbrella-closed": F9AF,
     "umbrella-outline": F54B,
     "undo": F54C,
     "undo-variant": F54D,
@@ -2165,6 +2290,7 @@ $mdi-icons: (
     "unfold-more-vertical": F760,
     "ungroup": F550,
     "unity": F6AE,
+    "unreal": F9B0,
     "untappd": F551,
     "update": F6AF,
     "upload": F552,
@@ -2207,7 +2333,9 @@ $mdi-icons: (
     "video-input-component": F83F,
     "video-input-hdmi": F840,
     "video-input-svideo": F841,
+    "video-minus": F9B1,
     "video-off": F568,
+    "video-plus": F9B2,
     "video-stabilization": F91A,
     "video-switch": F569,
     "view-agenda": F56A,
@@ -2236,6 +2364,7 @@ $mdi-icons: (
     "vlc": F57C,
     "voice": F5CB,
     "voicemail": F57D,
+    "volleyball": F9B3,
     "volume-high": F57E,
     "volume-low": F57F,
     "volume-medium": F580,
@@ -2294,8 +2423,10 @@ $mdi-icons: (
     "wechat": F611,
     "weight": F5A1,
     "weight-kilogram": F5A2,
+    "weight-pound": F9B4,
     "whatsapp": F5A3,
     "wheelchair-accessibility": F5A4,
+    "whistle": F9B5,
     "white-balance-auto": F5A5,
     "white-balance-incandescent": F5A6,
     "white-balance-iridescent": F5A7,
