--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,4 @@
-$mdi-filename:         "andes-icon";
+$mdi-filename:         "andes-font";
 $mdi-font-name:        "Andes Icons";
 $mdi-font-family:      "andesicons";
 $mdi-font-weight:      "regular";
